<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UnitConverter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_temp">Temperature</string>
    <string name="button_mass">Mass</string>
    <string name="button_speed">Speed</string>
    <string name="title_activity_temperature">Temperature</string>
    <string name="enter_temp">Enter temperature: </string>
    <string name="cels">Celsius</string>
    <string name="fahr">Fahrenheit</string>
    <string name="kelv">Kelvin</string>
    <string name="conv">Convert</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="result">Result: </string>
    <string name="title_activity_mass">Mass</string>
    <string name="enter_mass">Enter weight: </string>

    <string-array name="mass_array">
        <item>Grams</item>
        <item>Kilograms</item>
        <item>Tonnes</item>
        <item>Ounces</item>
        <item>Pounds[lbs]</item>
        <item>Carats</item>
    </string-array>
    
    <string-array name="speed_array">
        <item>Km/h</item>
        <item>Km/s</item>
        <item>m/h</item>
        <item>m/s</item>
        <item>mph</item>
        <item>ft/s</item>
        <item>Knots</item>
        <item>Mach</item>
    </string-array>

    <string name="title_activity_speed">Speed</string>
    <string name="enter_speed">Enter speed: </string>

</resources>
