<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_temp" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.51"
            android:ems="10"
            android:inputType="numberSigned|numberDecimal" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    	
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from"/>
    </LinearLayout>


        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/cels0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/cels"
                android:onClick="fromSelect" />
        

        <RadioButton
            android:id="@+id/fahr0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fahr"
            android:onClick="fromSelect"  />

        <RadioButton
            android:id="@+id/kelv0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kelv"
            android:onClick="fromSelect"  />
        </RadioGroup>


    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    	
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to"/>
    </LinearLayout>

    

    <RadioGroup android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
    <RadioButton
        android:id="@+id/cels1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/cels"
        android:onClick="toSelect" />

    <RadioButton
        android:id="@+id/fahr1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fahr"
        android:onClick="toSelect" />
    
    <RadioButton
        android:id="@+id/kelv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kelv"
        android:onClick="toSelect" />

    
        
    </RadioGroup>

	
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    
	    <Button
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:text="@string/conv"
	        android:onClick="convert"/>
   </LinearLayout>

	<TextView
	    android:id="@+id/resultText"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:text="@string/result"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>