<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_mass"/>
        <EditText 
            android:id="@+id/EditText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">       
        <TextView 
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/from"/> 
        <Spinner android:id="@+id/mass_spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/mass_array"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">       

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/to" />
 
        <Spinner android:id="@+id/mass_spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/mass_array"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conv"
            android:onClick="convert"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textMass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>
