<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_speed"/>
        <EditText 
            android:id="@+id/EditSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView 
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/from"/>
        <Spinner 
            android:id="@+id/speedSpinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/speed_array"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView 
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/to"/>
        <Spinner 
            android:id="@+id/speedSpinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/speed_array"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conv"
            android:onClick="convert"/>
    </LinearLayout>
    
    <TextView
        android:id="@+id/textSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />
   	
</LinearLayout>
